--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-animate": "~1.4.8",
+    "Snap.js": "snapjs#~1.9.3",
+    "angular-snap": "~1.8.5"
   }
 }
