--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-ui-router": "~0.2.15",
     "angular-animate": "~1.4.8",
     "Snap.js": "snapjs#~1.9.3",
-    "angular-snap": "~1.8.5"
+    "angular-snap": "~1.8.5",
+    "angular-simple-calendar": "~1.1.4"
   }
 }
